Start migration from gson to fory